# Online_Assignment_In_Instant_Delivery

./: .gitignore  CMakeLists.txt  Data.cpp  Data.h  Environment.cpp  Environment.h  Makefile  Matrix.h  Params.cpp  Params.h  README.md  a.out  main.cpp  net_REINFORCE.pt  optimalAssignment  orders.txt  routes.txt  train.py
data/: allDurations.csv  allDurations15.csv  allDurations15.txt  getirStores.json  isochroneWarehouse_600s_0.json  isochroneWarehouse_600s_2.json  isochroneWarehouse_600s_4.json  isochroneWarehouse_600s_6.json  isochroneWarehouse_600s_9.json  isochroneWarehouse_900s_0.json  isochroneWarehouse_900s_6.json  isochroneWarehouse_900s_7.json  isochroneWarehouse_900s_8.json  isochroneWarehouse_900s_9.json  stopData10Minutes.csv  stopData15Minutes.csv
data/Polygon_900s/: Polygon_900s.dbf  Polygon_900s.shp  Polygon_900s.shx
data/animationData/: orders.txt  orders_REINFORCE.txt  routes.txt  routes_REINFORCE.txt
dataCode/: convergencePlot.py  createInstance.py  drawData.py  getDistancesAPI.py  isochroneAPI.py  mergeIsochrones.py  plotRoutes.py  visualizeSimulation.py
instances/: instance900.txt  instance900_5_3_15.txt  instance900_8_3_30.txt  instance900_8_3_30_120.txt  instance_900_5_3_25_180_60_test.txt  instance_900_5_3_25_180_60_train.txt  instance_900_8_3_30_120_60.txt  instance_900_8_3_30_120_60_test.txt  instance_900_8_3_30_120_60_train.txt
python/: convergencePlot.py  createInstance.py  drawData.py  getDistancesAPI.py  mergeIsochrones.py
src/: Data.cpp  Data.h  Environment.cpp  Environment.h  main.cpp  net_REINFORCE.pt  xorshift128.h
(+33 files in other folders)
